<resources>
    <string name="app_name">Zakaz_s_soboi</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reset_text">Reset password</string>
    <string name="login">Login</string>
    <string name="registration_text">register</string>
    <string name="re_enter_password">Re enter password</string>
    <string name="register">Register</string>
    <string name="i_already_have_account">I already have account</string>
    <string name="go_to_cart">Go to cart</string>
</resources>